<resources>
    <string name="app_name">CarQuiz</string>
    <string name="start">Начать</string>
    <string name="back">Назад</string>
    <string name="level1">Уровень 1</string>
    <string name="level2">Уровень 2</string>
    <string name="level3">Уровень 3</string>
    <string name="level4">Уровень 4</string>
    <string name="level5">Уровень 5</string>
    <string name="level6">Уровень 6</string>
    <string name="level7">Уровень 7</string>
    <string name="level8">Уровень 8</string>
    <string name="level9">Уровень 9</string>
    <string name="level10">Уровень 10</string>
    <string name="level11">Уровень 11</string>
    <string name="level12">Уровень 12</string>
    <string name="level13">Уровень 13</string>
    <string name="level14">Уровень 14</string>
    <string name="level15">Уровень 15</string>
    <string name="level16">Уровень 16</string>
    <string name="level17">Уровень 17</string>
    <string name="level18">Уровень 18</string>
    <string name="level19">Уровень 19</string>
    <string name="level20">Уровень 20</string>
    <string name="level21">Уровень 21</string>
    <string name="level22">Уровень 22</string>
    <string name="level23">Уровень 23</string>
    <string name="level24">Уровень 24</string>
    <string name="level25">Уровень 25</string>
    <string name="level26">Уровень 26</string>
    <string name="level27">Уровень 27</string>
    <string name="level28">Уровень 28</string>
    <string name="level29">Уровень 29</string>
    <string name="level30">Уровень 30</string>
    <string name="level31">Уровень 31</string>
    <string name="level32">Уровень 32</string>
    <string name="level33">Уровень 33</string>
    <string name="level34">Уровень 34</string>
    <string name="level35">Уровень 35</string>
    <string name="level36">Уровень 36</string>
    <string name="level37">Уровень 37</string>
    <string name="level38">Уровень 38</string>
    <string name="level39">Уровень 39</string>
    <string name="level40">Уровень 40</string>
    <string name="text_cont">Продолжить</string>
</resources>